Fixed table align

--- a/css/style.less
+++ b/css/style.less
@@ -198,6 +198,7 @@ div.blog{
 		background-color: @lightorange;
 		color: @white;
 		text-align: -moz-center;
+		text-align: -webkit-center;
 		
 		table{
 			font-size: 28px;
@@ -272,6 +273,7 @@ div.blog{
 footer{
 	display: block;
 	text-align: -moz-center;
+	text-align: -webkit-center;
 	background-color:#272727;
 	table{
 		text-align: center;
